Correct structure of html and SCSS

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,9 @@
 $grey-400: #A8A8A8;
-$grey-200: #C1C1C1;
+$grey-300: #C1C1C1;
+$grey-200: #E7E7E7;
 $grey-100: #F0F0F0;
 $blue-100: #0023ff;
+$blue-200: #0018AC;
 $white: white;
 $black: black;
 
