Style home component on medium (768px) screens

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,6 +9,13 @@ $black: black;
 
 
 $navbar-width: 14.4rem;
+$navbar-width-sm: 6rem;
+$navbar-width-md: 7rem;
 $side-menu-width: 37.4rem;
+$side-menu-width-md: 30rem;
 $primary: $blue-100;
+
+$end-of-small-screen: 576px;
+$end-of-medium-screen: 768px;
+
 
