Style home component on large (1280px) screens

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -7,15 +7,18 @@ $blue-200: #0018AC;
 $white: white;
 $black: black;
 
+$primary: $blue-100;
 
 $navbar-width: 14.4rem;
 $navbar-width-sm: 6rem;
 $navbar-width-md: 7rem;
+$navbar-width-lg: 10rem;
+
 $side-menu-width: 37.4rem;
 $side-menu-width-md: 30rem;
-$primary: $blue-100;
 
 $end-of-small-screen: 576px;
 $end-of-medium-screen: 768px;
+$end-of-large-screen: 1280px;
 
 
