--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -21,4 +21,6 @@ $end-of-small-screen: 576px;
 $end-of-medium-screen: 768px;
 $end-of-large-screen: 1280px;
 
+$box-shadow-color: rgba(219, 219, 219, 0.5);
+
 
