feature/refactor: restyle sideMenu and navigation

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -14,7 +14,7 @@ $navbar-width-sm: 6rem;
 $navbar-width-md: 7rem;
 $navbar-width-lg: 10rem;
 
-$side-menu-width: 37.4rem;
+$side-menu-width: 50vmin;
 $side-menu-width-md: 30rem;
 
 $end-of-small-screen: 576px;
